test_apps/test-typechecker/fail/ac/ruletypeunknown.app
application test

access control rules

  rule pag name()
  {
    true
  }
  
  